{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 97,
  "lineage": "849d9c65-77dc-8175-c1fc-f99356b70042",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7b4f6fe3574b1a1",
            "association_id": "eipassoc-0290eef9ebc1b685d",
            "domain": "vpc",
            "id": "eipalloc-0c7b4f6fe3574b1a1",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0765f6ef5428bf42d",
            "private_dns": "ip-10-0-1-184.eu-west-2.compute.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-3-11-187-36.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.187.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:754590267022:instance/i-0cdf9ed1e9dc6fe43",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdf9ed1e9dc6fe43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcs-london",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0113199c9e1244c78",
            "private_dns": "ip-10-0-2-128.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0737eab8508b4f591",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f04465efb28cc0c5",
            "tags": {
              "Name": "backend-api"
            },
            "tags_all": {
              "Name": "backend-api"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0317cdbf6b09307d0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh1_group",
            "aws_subnet.subnet02",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b8d743224353ffe",
            "arn": "arn:aws:ec2:eu-west-2:754590267022:instance/i-030a7370bfbbda093",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030a7370bfbbda093",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcs-london",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b79f277d2e932e4",
            "private_dns": "ip-10-0-2-207.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbc8ef81e0160c3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f04465efb28cc0c5",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0317cdbf6b09307d0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh1_group",
            "aws_subnet.subnet02",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lmsfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:754590267022:instance/i-0a649a4892195a916",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a649a4892195a916",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tcs-london",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eec535f865bf051e",
            "private_dns": "ip-10-0-1-204.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "public_ip": "13.40.96.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018ee96efc5816402",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818f05fc506b0cea",
            "tags": {
              "Name": "frontend-webapp"
            },
            "tags_all": {
              "Name": "frontend-webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0317cdbf6b09307d0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh1_group",
            "aws_subnet.subnet01",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:internet-gateway/igw-034046b9c7aeb1226",
            "id": "igw-034046b9c7aeb1226",
            "owner_id": "754590267022",
            "tags": {
              "Name": "igway"
            },
            "tags_all": {
              "Name": "igway"
            },
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7b4f6fe3574b1a1",
            "connectivity_type": "public",
            "id": "nat-0cf6b00b19222f61e",
            "network_interface_id": "eni-0765f6ef5428bf42d",
            "private_ip": "10.0.1.184",
            "public_ip": "3.11.187.36",
            "subnet_id": "subnet-0818f05fc506b0cea"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet01",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:route-table/rtb-0a625af5ed6200454",
            "id": "rtb-0a625af5ed6200454",
            "owner_id": "754590267022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf6b00b19222f61e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat01",
            "aws_subnet.subnet01",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:route-table/rtb-0620e904cff4ab12e",
            "id": "rtb-0620e904cff4ab12e",
            "owner_id": "754590267022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf6b00b19222f61e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:route-table/rtb-0bec0ffd8d009a0fd",
            "id": "rtb-0bec0ffd8d009a0fd",
            "owner_id": "754590267022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034046b9c7aeb1226",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:route-table/rtb-0c6ec426421b5656d",
            "id": "rtb-0c6ec426421b5656d",
            "owner_id": "754590267022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034046b9c7aeb1226",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public01_rt"
            },
            "tags_all": {
              "Name": "public01_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049cf78e2750f538e",
            "route_table_id": "rtb-0620e904cff4ab12e",
            "subnet_id": "subnet-0f04465efb28cc0c5"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet02",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049cf78e2750f538e",
            "route_table_id": "rtb-0620e904cff4ab12e",
            "subnet_id": "subnet-0f04465efb28cc0c5"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet02",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3d39d282942ee3",
            "route_table_id": "rtb-0bec0ffd8d009a0fd",
            "subnet_id": "subnet-0818f05fc506b0cea"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.route_table_public",
            "aws_subnet.subnet01",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0853e656964beeef3",
            "route_table_id": "rtb-0c6ec426421b5656d",
            "subnet_id": "subnet-078661c10b431473c"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.route_table_public01",
            "aws_subnet.subnet03",
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh1_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:security-group/sg-0317cdbf6b09307d0",
            "description": "ssh1 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0317cdbf6b09307d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh1",
            "name_prefix": "",
            "owner_id": "754590267022",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:subnet/subnet-0818f05fc506b0cea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818f05fc506b0cea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754590267022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub01"
            },
            "tags_all": {
              "Name": "sub01"
            },
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:subnet/subnet-0f04465efb28cc0c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f04465efb28cc0c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754590267022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub02"
            },
            "tags_all": {
              "Name": "sub02"
            },
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:subnet/subnet-078661c10b431473c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078661c10b431473c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754590267022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub03"
            },
            "tags_all": {
              "Name": "sub03"
            },
            "vpc_id": "vpc-0c4adb82689af0145"
          },
          "dependencies": [
            "aws_vpc.main_digital"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_digital",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:754590267022:vpc/vpc-0c4adb82689af0145",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c131e7efb5f6354",
            "default_route_table_id": "rtb-038efdd60136ef1f1",
            "default_security_group_id": "sg-0ed03686a88760164",
            "dhcp_options_id": "dopt-018e79f6b4b9c77a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4adb82689af0145",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038efdd60136ef1f1",
            "owner_id": "754590267022",
            "tags": {
              "Name": "digitallink"
            },
            "tags_all": {
              "Name": "digitallink"
            }
          }
        }
      ]
    }
  ]
}